[build-system]
requires = ["setuptools>=61,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xelektron-token-enhancer"
version = "0.2.1"
description = "Cuts AI agent web-fetching costs by up to 99.9% by stripping junk from web pages before they reach your LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "mcp>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/xelektron/token-enhancer"
Repository = "https://github.com/xelektron/token-enhancer"

[tool.setuptools]
py-modules = ["mcp_server", "data_proxy", "optimizer", "proxy", "url_validator"]
